fix: product card on tablet

--- a/dation.css
+++ b/dation.css
@@ -728,7 +728,6 @@ li a {
     /* PRODUCT CARD */
     .product-card {
         display: flex;
-        position: relative;
         flex-direction: row;
         height: 210px;
         width: 90vw;
@@ -750,6 +749,7 @@ li a {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        flex-grow: 1;
         position: relative;
     }
     
